[package]
name = "phoenix-abi"
version = "0.1.0"
authors = ["Jules de Smit <julesdesmit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
phoenix = { git = "ssh://git@github.com/dusk-network/phoenix.git" }
