[package]
name = "phoenix-abi"
version = "0.1.0"
authors = ["Jules de Smit <julesdesmit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "*", default-features = false }
fermion = { version = "0.2", default-features = false }
phoenix = { git = "ssh://git@github.com/dusk-network/phoenix.git", branch = "plonk", optional = true }

[features]
default = ["std"]
std = ["fermion/std", "phoenix"]
