[package]
name = "phoenix-abi"
version = "0.1.0"
authors = [
  "Jules de Smit <julesdesmit@gmail.com>",
  "zer0 <matteo@dusk.network>"
  ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "*", default-features = false }
fermion = { version = "0.2", default-features = false }
phoenix = { git = "https://github.com/dusk-network/phoenix", optional = true }


[features]
default = ["std"]
std = ["fermion/std", "phoenix"]

# This is a temporary fix until we stop to use zexe; it's needed to replace
# in the dependency graph the library below with the revision specified.
# Unfortunately `patch` works matching just the URL - doesn't take in account
# revision or branches, see:  https://github.com/rust-lang/cargo/issues/5478
#
# A quick workaround is changing the URL with double slashes
[patch.'https://github.com/scipr-lab/zexe/']
algebra = { git = 'https://github.com/scipr-lab//zexe', rev="2c22b77" }
ff-fft = { git = "https://github.com/scipr-lab//zexe", rev="2c22b77" }
bench-utils = { git = "https://github.com/scipr-lab//zexe", rev="2c22b77" }

[patch.'https://github.com/scipr-lab/poly-commit']
poly-commit = { git = "https://github.com/scipr-lab//poly-commit", rev="77676213"}
